--- a/index.html
+++ b/index.html
@@ -1,93 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rhea Estudio - Sitio en construccion</title>
-    <style>
-        * {
-            padding: 0;
-            margin: 0;
-            text-decoration: none;
-            color: white;
-        }
+	<meta charset="UTF-8">
+    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    	<title>Rhea Estudio - Sitio en construcción</title>
+    	<style>
+		* {
+			padding: 0;
+			margin: 0;
+		}
 
-        body, html {
-            height: 100%;
-            background-color: #141414;
-        }
-        
-        .wrapper {
-            height: 100%;
-            display: flex;
-            align-content: center;
-            flex-wrap: wrap;
-        }
+		body, html {
+			height: 100%;
+		}
 
-        .logo {
-            background: url('logo.svg') 50% no-repeat;
+		.wrapper {
+			height: 100%;
+			width: 100%;
+			display: flex;
+			align-content: center;
+			flex-wrap: wrap;
+			background: #141414 url('bracket.svg') center 100% no-repeat;
+			background-size: contain;
+			position: fixed;
+
+		}
+
+		.logo {
+			background: url('logo.svg') center no-repeat;
 			background-size: 200px;
-            width: 100%;
-            height: 300px;
-        }
+			width: 100%;
+			height: 300px;
+		}
 
-        .bracket {
-            background: url('bracket.svg') no-repeat;
-			background-size: 600px;
-            width: 600px;
-            height: 300px;
-            position: absolute;
-            bottom: 0;
-        }
+		.social {
+			width: 100%;
+			text-align: center;
+		}
 
-        .bracket.left {
-            left: 0;
-        }
-
-        .bracket.right {
-            right: 0;
-            transform: scale(-1, 1);
-            transform-origin: center;
-        }
-
-        .social {
-            width: 100%;
-            text-align: center;
-        }
-
-        .social img {
-            height: 30px;
-            margin: 0 5px;
-        }
-
-        .social a:hover {
-            opacity: 1;
-        }
-
-        .social a {
-            cursor: pointer;
-            opacity: .7;
-        }
-
-        @media only screen and (max-width: 896px) {		
-            .bracket {
-                background-size: 150px;
-                width: 150px;
-                height: 80px;
-            }
-        }
-    </style>
+		.social img {
+			height: 30px;
+		}
+    	</style>
 </head>
 <body>
-    <div class="wrapper">
-        <div class="logo"></div>
-        <div class="social">
-            <a href="https://www.instagram.com/rheaestudio/" target="_blank"><img src="instagram.svg"></a>
-            <a href="https://www.facebook.com/RheaEstudio/" target="_blank"><img src="facebook.svg"></a>
-        </div>
-        <div class="bracket left"></div>
-        <div class="bracket right"></div>
-    </div>
+	<div class="wrapper">
+        	<div class="logo"></div>
+        	<div class="social">
+        		<a href="https://www.instagram.com/rheaestudio/" target="_blank"><img src="instagram.svg"></a>
+            		<a href="https://www.facebook.com/RheaEstudio/" target="_blank"><img src="facebook.svg"></a>
+        	</div>
+    	</div>
 </body>
 </html>
